Add PostgreSQL and JPA integration, migrate from CSV to database storage